Make the multisend modal scroll proper. Also fix a small bug with a View CSV button being too small.

--- a/public/less/designview.less
+++ b/public/less/designview.less
@@ -395,7 +395,6 @@ input.daystosign {
 }
 
 .designCSVSignatoryPopupContent {
-    overflow-x: auto;
     width: 290px;
     margin: auto;
     padding-top: 30px;
@@ -403,7 +402,13 @@ input.daystosign {
 
     &.file-uploaded {
         margin: 0;
+        width: 450px;
     }
+}
+
+.designCSVSignatoryPopupScroll {
+    overflow-x: auto;
+    margin-bottom: 40px;
 }
 
 .selectAuthorAttachmentPopupContent .header,
